-- Version 2.7.3, released ...

 * Bug fix: don't display an error message while creating the preview for a Custom Ground Cover layer with a modern material

-- Version 2.7.2, released 11-9-2019

 * Bug fix: when placing custom objects the post processing step sometimes accidentally removed vegetation around them; this has been fixed

-- Version 2.7.1, released 3-9-2019

 * Since it unfortunately transpires that Minecraft 1.14 no longer supports populating the map after generation, the Populate and Structures options will be disabled for the Minecraft 1.14 format
 * The "Caves everywhere" option now works
 * The Frost layer once again places snow on Deep Snow blocks

-- Version 2.7.0, released 18-8-2019

 * Implement support for Minecraft 1.14 (1.14.4 to be precise) and remove support for 1.13

-- Version 2.6.5, released 2-6-2019

 * Bug fix: make rotation of glass panes, etc. work again

-- Version 2.6.4, released 1-6-2019

 * Bug fix: correct the way materials with a "rotation" property were being mirrored. It was causing errors, or in the last release, mirroring to be disabled

-- Version 2.6.3, released 31-5-2019

 * Bug fix: don't try to mirror, rotate or invert materials for legacy platforms when there is no legacy equivalent of the transformed material

-- Version 2.6.2, released 30-5-2019

 * Bug fix: don't give errors about unselected plants in Custom Plant Layers when exporting to Minecraft 1.12
 * Bug fix: the Frost layer will once again turn water into ice
 * The beta Caves layer now honours the "breaks the surface" settings (but not yet the "remove water above openings" and "flood the caves" settings; that will come in the near future)
 * Fluids placed by the Resources layer will now flow in Minecraft 1.13 (this may cause Minecraft to be slow when first loading the chunks)

-- Version 2.6.1, released 27-5-2019

 * Bug fix: don't give errors about non-vanilla legacy blocks when exporting to Minecraft 1.12